[project]
name = "20250916-arm-shape"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "scipy>=1.16.2",
    "streamlit>=1.49.1",
    "streamlit-webrtc>=0.63.4",
]
